--- a/woorischool/Views/Parents/PopupViews/ClassInfoPopupViewController.xib
+++ b/woorischool/Views/Parents/PopupViews/ClassInfoPopupViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -38,7 +38,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mek-VC-00f">
-                    <rect key="frame" x="17" y="243.5" width="380" height="409"/>
+                    <rect key="frame" x="17" y="223" width="380" height="450.5"/>
                     <subviews>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이름" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="95q-Wz-gwi" customClass="CustomLabel" customModule="우리스쿨" customModuleProvider="target">
                             <rect key="frame" x="12" y="20" width="356" height="47"/>
@@ -56,7 +56,7 @@
                             </userDefinedRuntimeAttributes>
                         </label>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="dzG-qG-PMz">
-                            <rect key="frame" x="16" y="67" width="348" height="191"/>
+                            <rect key="frame" x="16" y="67" width="348" height="232.5"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="0tH-uD-vec">
                                     <rect key="frame" x="0.0" y="0.0" width="348" height="63"/>
@@ -232,11 +232,11 @@
                                         <constraint firstAttribute="height" constant="1" id="qu1-jh-rHB"/>
                                     </constraints>
                                 </view>
-                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="GMv-9W-egv">
-                                    <rect key="frame" x="0.0" y="128" width="348" height="63"/>
+                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="GMv-9W-egv">
+                                    <rect key="frame" x="0.0" y="128" width="348" height="104.5"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6mN-h5-2vo">
-                                            <rect key="frame" x="0.0" y="0.0" width="116" height="63"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="116" height="104.5"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="시간" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8zB-2y-SJm">
                                                     <rect key="frame" x="47.5" y="13" width="21" height="14"/>
@@ -244,8 +244,8 @@
                                                     <color key="textColor" name="brownGrey"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="13:00-13:40" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dJD-Wu-6h3">
-                                                    <rect key="frame" x="20" y="35.5" width="76" height="16.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="13:00-13:40" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="dJD-Wu-6h3">
+                                                    <rect key="frame" x="0.0" y="27" width="116" height="66.5"/>
                                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -253,14 +253,16 @@
                                             </subviews>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                             <constraints>
-                                                <constraint firstItem="dJD-Wu-6h3" firstAttribute="centerX" secondItem="6mN-h5-2vo" secondAttribute="centerX" id="2t6-AL-XX0"/>
                                                 <constraint firstAttribute="bottom" secondItem="dJD-Wu-6h3" secondAttribute="bottom" constant="11" id="5Ea-I2-vjy"/>
+                                                <constraint firstItem="dJD-Wu-6h3" firstAttribute="top" secondItem="8zB-2y-SJm" secondAttribute="bottom" id="CAF-8L-LIz"/>
                                                 <constraint firstItem="8zB-2y-SJm" firstAttribute="top" secondItem="6mN-h5-2vo" secondAttribute="top" constant="13" id="CNB-jE-WIK"/>
+                                                <constraint firstItem="dJD-Wu-6h3" firstAttribute="leading" secondItem="6mN-h5-2vo" secondAttribute="leading" id="DiE-j5-VLr"/>
                                                 <constraint firstItem="8zB-2y-SJm" firstAttribute="centerX" secondItem="6mN-h5-2vo" secondAttribute="centerX" id="Qq4-fS-XMl"/>
+                                                <constraint firstAttribute="trailing" secondItem="dJD-Wu-6h3" secondAttribute="trailing" id="huw-Ne-9gG"/>
                                             </constraints>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dOb-kM-WNr">
-                                            <rect key="frame" x="116" y="0.0" width="116" height="63"/>
+                                            <rect key="frame" x="116" y="0.0" width="116" height="71"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="수업시수" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g4o-QD-Si4">
                                                     <rect key="frame" x="37" y="13" width="42" height="14"/>
@@ -269,7 +271,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="45분x2회(11주)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XpM-kO-GBp">
-                                                    <rect key="frame" x="13" y="35.5" width="90" height="16.5"/>
+                                                    <rect key="frame" x="13" y="27" width="90" height="16.5"/>
                                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -278,13 +280,13 @@
                                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                             <constraints>
                                                 <constraint firstItem="XpM-kO-GBp" firstAttribute="centerX" secondItem="dOb-kM-WNr" secondAttribute="centerX" id="BON-fk-Bug"/>
+                                                <constraint firstItem="XpM-kO-GBp" firstAttribute="top" secondItem="g4o-QD-Si4" secondAttribute="bottom" id="QGu-dj-XvQ"/>
                                                 <constraint firstItem="g4o-QD-Si4" firstAttribute="centerX" secondItem="dOb-kM-WNr" secondAttribute="centerX" id="ZkA-Ax-Hlm"/>
                                                 <constraint firstItem="g4o-QD-Si4" firstAttribute="top" secondItem="dOb-kM-WNr" secondAttribute="top" constant="13" id="gff-jR-Tdg"/>
-                                                <constraint firstAttribute="bottom" secondItem="XpM-kO-GBp" secondAttribute="bottom" constant="11" id="rc6-ov-fON"/>
                                             </constraints>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lFv-xq-9oq">
-                                            <rect key="frame" x="232" y="0.0" width="116" height="63"/>
+                                            <rect key="frame" x="232" y="0.0" width="116" height="71"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="수업장소" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lts-2C-4PA">
                                                     <rect key="frame" x="37" y="13" width="42" height="14"/>
@@ -293,7 +295,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1-8" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T4n-F0-fGA">
-                                                    <rect key="frame" x="47.5" y="35.5" width="21.5" height="16.5"/>
+                                                    <rect key="frame" x="47.5" y="27" width="21.5" height="16.5"/>
                                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -302,15 +304,12 @@
                                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                             <constraints>
                                                 <constraint firstItem="Lts-2C-4PA" firstAttribute="top" secondItem="lFv-xq-9oq" secondAttribute="top" constant="13" id="4b7-R9-odC"/>
-                                                <constraint firstAttribute="bottom" secondItem="T4n-F0-fGA" secondAttribute="bottom" constant="11" id="JN0-of-eNj"/>
                                                 <constraint firstItem="Lts-2C-4PA" firstAttribute="centerX" secondItem="lFv-xq-9oq" secondAttribute="centerX" id="Lne-TQ-Ga0"/>
+                                                <constraint firstItem="T4n-F0-fGA" firstAttribute="top" secondItem="Lts-2C-4PA" secondAttribute="bottom" id="Obx-b1-k6v"/>
                                                 <constraint firstItem="T4n-F0-fGA" firstAttribute="centerX" secondItem="lFv-xq-9oq" secondAttribute="centerX" id="fTo-JA-BmI"/>
                                             </constraints>
                                         </view>
                                     </subviews>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="63" id="ciY-63-4i2"/>
-                                    </constraints>
                                 </stackView>
                             </subviews>
                             <constraints>
@@ -321,7 +320,7 @@
                             </constraints>
                         </stackView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dvG-6p-3C3" customClass="CustomButton" customModule="우리스쿨" customModuleProvider="target">
-                            <rect key="frame" x="18" y="268" width="344" height="50"/>
+                            <rect key="frame" x="18" y="309.5" width="344" height="50"/>
                             <color key="backgroundColor" name="whiteTwo"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="50" id="M5W-QA-Sjc"/>
@@ -344,7 +343,7 @@
                             </userDefinedRuntimeAttributes>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y6z-Wc-cxn">
-                            <rect key="frame" x="18" y="343" width="344" height="50"/>
+                            <rect key="frame" x="18" y="384.5" width="344" height="50"/>
                             <color key="backgroundColor" name="greenishTeal"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="50" id="a2P-3n-yxf"/>
@@ -383,7 +382,7 @@
                 <constraint firstItem="mek-VC-00f" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="17" id="wsa-v8-gMW"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <point key="canvasLocation" x="-2128" y="-9"/>
+            <point key="canvasLocation" x="-2128.985507246377" y="-9.375"/>
         </view>
     </objects>
     <resources>
